--- a/app/src/main/res/layout/fragment_film_description.xml
+++ b/app/src/main/res/layout/fragment_film_description.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragment_film.FilmFragment"
-    android:background="@color/description_back">
+    android:background="@color/back">
 
     <ImageView
         android:id="@+id/ivFilmImage"
@@ -21,16 +21,12 @@
         android:id="@+id/tvFilmName"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
         android:gravity="center"
         android:text="@string/filmName"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/ivFilmImage"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toEndOf="@+id/ivFilmImage"
         app:layout_constraintTop_toTopOf="@+id/ivFilmImage" />
 
@@ -48,7 +44,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ivFilmImage" />
 
-
+    <ImageView
+        android:id="@+id/ivLike"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="20dp"
+        android:src="@drawable/like_off"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
