--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="description_back">#201F1F</color>
+    <color name="back">#201F1F</color>
+    <color name="back_menu">#99292828</color>
+    <color name="text_color">#63FFFFFF</color>
 </resources>
