--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,10 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.MvvmFilmProject" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/description_back</item>
-        <item name="colorPrimaryVariant">@color/description_back</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/back</item>
+        <item name="colorPrimaryVariant">@color/back</item>
+        <item name="colorOnPrimary">#201F1F</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
